--- a/inc/css/deco.css
+++ b/inc/css/deco.css
@@ -32,3 +32,19 @@ header {
     font-weight: bold;
     font-size: 24px;
 }
+
+header nav {
+    position: fixed;
+    width: 100%;
+}
+
+header nav li {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    background: rgba(0, 0, 0, 0);
+    overflow: hidden;
+    color: white;
+    text-align: center;
+    transition: 1s;
+}
