--- a/inc/css/deco.css
+++ b/inc/css/deco.css
@@ -24,10 +24,12 @@ header {
     text-align: justify;
 }
 
-.logo {
+.logo img {
     position: fixed;
     float: left;
-    margin: 16px 36px;
+    width: 100px;
+    height: 100px;
+    margin: 5px 16px;
     color: white;
     font-weight: bold;
     font-size: 24px;
@@ -38,13 +40,36 @@ header nav {
     width: 100%;
 }
 
-header nav li {
+header nav ul {
     padding: 0;
     margin: 0;
     list-style: none;
-    background: rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
     overflow: hidden;
     color: white;
     text-align: center;
     transition: 1s;
+}
+
+header nav.black ul {
+    background: black;
+}
+
+header nav ul li {
+    display: inline-block;
+    padding: 20px;
+}
+
+header nav ul li a {
+    color: white;
+    font-size: 20px;
+}
+
+.menu-icon {
+    width: 100%;
+    color: white;
+    text-align: right;
+    box-sizing: border-box;
+    cursor: pointer;
+    margin-left: 260px;
 }
