--- a/inc/css/deco.css
+++ b/inc/css/deco.css
@@ -27,8 +27,9 @@ header {
 .logo img {
     position: fixed;
     float: left;
-    width: 100px;
+    width: 110px;
     height: 100px;
+    box-shadow: 0px 10px 10px 0px;
     margin: 5px 16px;
     color: white;
     font-weight: bold;
@@ -72,4 +73,27 @@ header nav ul li a {
     box-sizing: border-box;
     cursor: pointer;
     margin-left: 260px;
+}
+
+.loginbox {
+    width: 320px;
+    height: auto;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+}
+
+.avatar {
+    width: 110px;
+    height: 110px;
+    color: white;
+    background: red;
+    border-radius: 50%;
+    margin-left: 34%;
+    margin-top: -15%;
+    text-align: center;
 }
