--- a/inc/css/deco.css
+++ b/inc/css/deco.css
@@ -119,6 +119,38 @@ header nav ul li a {
     box-sizing: border-box;
 }
 
+.popup {
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.9);
+    top: 0;
+    left: 0;
+}
+
+.close {
+    color: white;
+}
+
+.close:hover {
+    color: white;
+    cursor: pointer;
+}
+
+.inscriptbox {
+    width: 500px;
+    height: auto;
+    background: rgba(0, 0, 0, 0.9);
+    color: white;
+    padding: 0px 20px 40px 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+}
+
 .avatar {
     width: 110px;
     height: 110px;
@@ -137,25 +169,40 @@ h1 {
     font-size: 28px;
 }
 
-.loginbox p {
+.loginbox p,
+.inscriptbox p {
     margin: 0;
     padding: 0;
     font-weight: bold;
 }
 
-.loginbox input {
+.loginbox input,
+.inscriptbox input,
+.loginbox select,
+.inscriptbox select,
+.loginbox select option,
+.inscriptbox select option {
     width: 100%;
     margin-bottom: 20px;
 }
 
 input[type=text],
-input[type=password] {
+input[type=password],
+select {
     border: none;
     border-bottom: 1px solid white;
     background: transparent;
     outline: none;
     height: 40px;
     color: white;
+    font-size: 16px;
+}
+
+option {
+    background: rgba(0, 0, 0, 0.1);
+    outline: none;
+    height: 40px;
+    color: black;
     font-size: 16px;
 }
 
@@ -174,7 +221,8 @@ input[type=submit]:hover {
     font-size: 20px;
 }
 
-.loginbox a {
+.loginbox a,
+.inscriptbox a {
     text-decoration: none;
     font-size: 12px;
     line-height: 20px;
@@ -182,7 +230,28 @@ input[type=submit]:hover {
     font-weight: bold;
 }
 
-.loginbox a:hover {
+.loginbox a:hover,
+.inscriptbox a:hover {
     color: white;
     text-decoration: underline;
+}
+
+.verif {
+    height: auto;
+    padding: 0px 0px 0px 0px;
+}
+
+.verif ul {
+    padding: 3px 5px 0px 5px;
+    list-style: none;
+}
+
+.verif ul li {
+    font-size: 12px;
+    line-height: 15px;
+}
+
+#infoI {
+    position: absolute;
+    left: 15%;
 }
