--- a/inc/css/decos.css
+++ b/inc/css/decos.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    background: grey;
 }
 
 body {
@@ -75,11 +76,75 @@ header nav ul li a {
     margin-left: 260px;
 }
 
+.parole {
+    width: 420px;
+    text-align: center;
+    padding: 10px 20px 20px 20px;
+    position: absolute;
+    left: 25%;
+    top: 25%;
+    border: 2px solid white;
+}
+
+.parole h1 {
+    font-size: 44px;
+    font-weight: bold;
+    color: white;
+    padding: 0;
+    border-bottom: 2px solid white;
+}
+
+.parole h5 {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
+
+.parole img {
+    width: 150px;
+    height: 200px;
+    /*transform: rotate(20deg);*/
+}
+
 .loginbox {
     width: 320px;
     height: auto;
     background: rgba(0, 0, 0, 0.7);
     color: white;
+    padding: 0px 20px 40px 20px;
+    position: absolute;
+    top: 60%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+}
+
+.popupI,
+.popupR {
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.9);
+    top: 0;
+    left: 0;
+}
+
+.close {
+    color: white;
+}
+
+.close:hover {
+    color: white;
+    cursor: pointer;
+}
+
+.inscriptbox {
+    width: 500px;
+    height: auto;
+    background: rgba(0, 0, 0, 0.9);
+    color: white;
+    padding: 0px 20px 40px 20px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -93,7 +158,104 @@ header nav ul li a {
     color: white;
     background: red;
     border-radius: 50%;
-    margin-left: 34%;
+    margin-left: 32%;
     margin-top: -15%;
     text-align: center;
+}
+
+h1 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 28px;
+}
+
+.loginbox p,
+.inscriptbox p {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.loginbox input,
+.inscriptbox input,
+.loginbox select,
+.inscriptbox select,
+.loginbox select option,
+.inscriptbox select option {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+input[type=text],
+input[type=password],
+select {
+    border: none;
+    border-bottom: 1px solid white;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: white;
+    font-size: 16px;
+}
+
+option {
+    background: rgba(0, 0, 0, 0.1);
+    outline: none;
+    height: 40px;
+    color: black;
+    font-size: 16px;
+}
+
+input[type=submit] {
+    border: none;
+    outline: none;
+    height: 40px;
+    background: red;
+    color: white;
+    font-size: 18px;
+    border-radius: 22px;
+}
+
+input[type=submit]:hover {
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.loginbox a,
+.inscriptbox a {
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 20px;
+    color: rgb(61, 169, 169);
+    font-weight: bold;
+}
+
+.loginbox a:hover,
+.inscriptbox a:hover {
+    color: white;
+    text-decoration: underline;
+}
+
+.verif {
+    height: auto;
+    padding: 0px 0px 0px 0px;
+}
+
+.verif ul {
+    padding: 3px 5px 0px 5px;
+    list-style: none;
+}
+
+.verif ul li {
+    font-size: 12px;
+    line-height: 15px;
+}
+
+#infoI {
+    width: 500px;
+    height: auto;
+    position: absolute;
+    left: 22%;
+    top: 12%;
 }
