--- a/inc/css/deco.css
+++ b/inc/css/deco.css
@@ -255,3 +255,9 @@ input[type=submit]:hover {
     position: absolute;
     left: 15%;
 }
+
+.util {
+    border: 5px solid red;
+    position: absolute;
+    top: 20%;
+}
