--- a/inc/css/decos.css
+++ b/inc/css/decos.css
@@ -78,8 +78,8 @@ header nav ul li a {
 
 .util {
     width: 110px;
-    display: none;
     border: 3px solid white;
+    background: rgba(0, 0, 0, 0.5);
     position: relative;
     left: 87.5%;
     top: 10%;
@@ -91,8 +91,14 @@ header nav ul li a {
     color: white;
 }
 
+.util ul li {
+    color: rgb(89, 9, 9);
+    font-weight: bold;
+    text-align: center;
+}
+
 .util ul li a {
-    color: black;
+    color: white;
     font-weight: bold;
     line-height: 10px;
 }
@@ -305,4 +311,12 @@ input[type=submit]:hover {
     position: absolute;
     left: 22%;
     top: 12%;
+}
+
+.afficher {
+    visibility: visible;
+}
+
+.cacher {
+    visibility: hidden;
 }
